--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
 <body>
 <section class="banner">
-    <header>
+    <header class="header">
         <a href="index.html" class="logo"><span>Min</span>Portfolio</a>
         <ul>
             <li>
@@ -59,17 +59,19 @@
     <div class="content">
         <h3>Hej!</h3>
         <h2>Jeg hedder <span id="text">Peter</span></h2>
+        <img src="peter.jpg" class="peter_img2">
         <p>Velkommen til min Portfolio. Her kan du se nogle af de projekter jeg har lavet. 
             <br>Det er projekter indenfor Spiludvikling, Hjemmesider, Robotter og UI/UX Design.</p>
 
         <button class="kontakt"><i id="fa-phone" class="fa fa-phone"></i>   Kom i kontakt med mig</button>
+    
     </div>
 
     <img src="peter.jpg" class="peter_img">
 
     <ul class="sci">
-        <li><a href="https://www.facebook.com/Groenlaenderen/" target="_blank"><img src="facebook_icon.png" alt="facebook_icon" width="3%"></a></li>
-        <li><a href="https://www.linkedin.com/in/peter-obling-746231265/" target="_blank"><img src="linkedin_icon.png" alt="linkedin_icon" width="3%"></a></li>
+        <li><a href="https://www.facebook.com/Groenlaenderen/" target="_blank" class="fa fa-facebook"></a></li>
+        <li><a href="https://www.linkedin.com/in/peter-obling-746231265/" target="_blank" class="fa fa-linkedin"></a></li>
     </ul>
 
 </section>
