--- a/index.html
+++ b/index.html
@@ -19,28 +19,18 @@
             <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAACAAAAAgBAMAAACBVGfHAAAAMFBMVEUAAAD///////////////////////////////////////////////////////////87TQQwAAAAD3RSTlMAAQ8TFB4fSV6Ag4Wt6/uDY192AAAAQElEQVQoz2NgIAiEXVCAAsP5/yjgOwMq//8vdIHfDO9RBX4y9KEKXGOgCUCz5SqmOzBciuEXDN9ihAc1wGANZAAX+vf+Xu8gUwAAAABJRU5ErkJggg==" width="32" height="32" alt="">
         </label>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li>
+                <a href="spiludvikling.html">Spil & Læring</a>
                 <ul>
                     <li><a href="#">Link 1</a></li>
                     <li><a href="#">Link 2</a></li>
-                    <li>
-                        <ul>
-                            <li>
-                                <ul>
-                                    <li><a href="#">Link 1</a></li>
-                                    <li><a href="#">Link 2</a></li>
-                                    <li><a href="#">Link 3</a></li>
-                                </ul>
-                                <a href="#">Links</a>
-                            </li>
-                        </ul>
-                        <a href="#">Links</a>
-                    </li>
                 </ul>
-                <a href="#">Links</a>
             </li>
-            <li><a href="#">About</a></li>
+            <li><a href="hjemmesider.html">Hjemmesider</a></li>
+            <li><a href="robotter.html">Robotter</a></li>
+            <li><a href="UI_UX_design.html">UI/UX Design</a></li>
+            <li><a href="om_mig.html">About</a></li>
         </ul>
     </div>
 <section class="banner">
@@ -53,7 +43,7 @@
         <h3>Hej!</h3>
         <h2>Jeg hedder <span id="text">Peter</span></h2>
         <img src="peter.jpg" class="peter_img2">
-        <p>Velkommen til min Portfolio. Her kan du se nogle af de projekter jeg har lavet. 
+        <p>Velkommen til min Portfolio. Her kan du se nogle af de projekter, jeg har lavet. 
             <br>Det er projekter indenfor Spiludvikling, Hjemmesider, Robotter og UI/UX Design.</p>
 
         <button class="kontakt"><i id="fa-phone" class="fa fa-phone"></i>   Kom i kontakt med mig</button>
