--- a/robotter.html
+++ b/robotter.html
@@ -38,6 +38,26 @@
     <section class="banner">
         <div class="content">
              
+            <h3>SpyCar - Spionbil til børn</h3>
+            <p>
+                Her har jeg været med til at skabe et legeartifakt, der kan være med til at vække børns interesse for både leg, men også for robotteknologi og programmering.
+            </p>
+             <br><br><br>
+             <h3>Prototypen i aktion:</h3>
+             <p>
+                SpyCar er en sammenfatning af komponenter heriblandt et kamera, mikrofon, arduino og raspberry pi, der alt sammen er forbundet til vores RC (Remote Controlled) car.
+                <br>
+                Der vises et livefeed på en iPad sendt direkte i realtime via en lokal server forbindelse til den forbundne raspberry pi i bilen.
+             </p>
+         </div>
+ 
+         <img src="spycar.png" class="spycar">
+         <img src="spycar3.png" class="spycar3">
+     </section>
+
+    <section class="banner">
+        <div class="content">
+             
             <h3>Plæneklipper med Arduino</h3>
             <p>
                 Her vises en figur med en samlet hardware og software løsning hvor der skulle skabes en kopi af en rigtig plæneklipper, bare i en mindre version.
