small text update

--- a/UI_UX_design.html
+++ b/UI_UX_design.html
@@ -39,7 +39,7 @@
        <div class="content">
             
             <h3>Samarbejde med GLOW Odense</h3>
-            <p>I november 2019 var jeg med til at sikre et samarbejde med GLOW om, at transformere de kedelige skraldespande til nutiden. </p>
+            <p>I november 2019 var jeg med til at sikre et samarbejde med GLOW om, at transformere de kedelige skraldespande til en iøjnefaldende del af lysudstillingen. </p>
     
             <br><br><br>
             <h3>Endelig prototype:</h3>
