--- a/robotter.html
+++ b/robotter.html
@@ -48,6 +48,7 @@
                 SpyCar er en sammenfatning af komponenter heriblandt et kamera, mikrofon, arduino og raspberry pi, der alt sammen er forbundet til vores RC (Remote Controlled) car.
                 <br>
                 Der vises et livefeed på en iPad sendt direkte i realtime via en lokal server forbindelse til den forbundne raspberry pi i bilen.
+                Bilen styres trådløst med en selvbygget controller.
              </p>
          </div>
  
