--- a/UI_UX_design.html
+++ b/UI_UX_design.html
@@ -21,13 +21,7 @@
         </label>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li>
-                <a href="spiludvikling.html">Spil & Læring</a>
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                </ul>
-            </li>
+            <li><a href="spiludvikling.html">Spil & Læring</a></li>
             <li><a href="hjemmesider.html">Hjemmesider</a></li>
             <li><a href="robotter.html">Robotter</a></li>
             <li><a href="UI_UX_design.html">UI/UX Design</a></li>
@@ -61,7 +55,7 @@
             <h3>Prototype af muligheder med Augmented Reality</h3>
             <p>Dette er et kort eksempel af mulighederne med Augmented Reality og dets brug i anatomi og biologi undervisningen som supplerende materiale.</p>
         </div>    
-        <iframe width=100% height=350px src="AR_anatomi.mp4" frameborder="1" allowfullscreen></iframe>
+        <iframe width=100% height=350px src="AR_anatomi.mp4" frameborder="1" sandbox allowfullscreen></iframe>
     </iframe>
     </section>
     
