--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
         </label>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li>
-                <a href="spiludvikling.html">Spil & Læring</a>
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                </ul>
-            </li>
+            <li><a href="spiludvikling.html">Spil & Læring</a></li>
             <li><a href="hjemmesider.html">Hjemmesider</a></li>
             <li><a href="robotter.html">Robotter</a></li>
             <li><a href="UI_UX_design.html">UI/UX Design</a></li>
