--- a/robotter.html
+++ b/robotter.html
@@ -21,13 +21,7 @@
         </label>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li>
-                <a href="spiludvikling.html">Spil & Læring</a>
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                </ul>
-            </li>
+            <li><a href="spiludvikling.html">Spil & Læring</a></li>
             <li><a href="hjemmesider.html">Hjemmesider</a></li>
             <li><a href="robotter.html">Robotter</a></li>
             <li><a href="UI_UX_design.html">UI/UX Design</a></li>
@@ -94,7 +88,7 @@
              </p>
          </div>
  
-         <iframe width=100% height=350px src="island-vid.mp4" frameborder="1" allowfullscreen></iframe>
+         <iframe width=100% height=350px src="island-vid.mp4" frameborder="1" sandbox allowfullscreen></iframe>
         </iframe>     
     </section>
     
