--- a/spiludvikling.html
+++ b/spiludvikling.html
@@ -21,13 +21,7 @@
         </label>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li>
-                <a href="spiludvikling.html">Spil & Læring</a>
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                </ul>
-            </li>
+            <li><a href="spiludvikling.html">Spil & Læring</a></li>
             <li><a href="hjemmesider.html">Hjemmesider</a></li>
             <li><a href="robotter.html">Robotter</a></li>
             <li><a href="UI_UX_design.html">UI/UX Design</a></li>
@@ -72,7 +66,7 @@
                 Konceptet er inspireret fra det klassiske Arcade-spil, hvor man skal slå en muldvarp i hovedet også kaldet "whack a mole".
             </p>
         </div>    
-        <iframe width=100% height=350px src="wacca.mp4" class="wacca-vid" frameborder="1" allowfullscreen></iframe>
+        <iframe width=100% height=350px src="wacca.mp4" class="wacca-vid" frameborder="1" sandbox allowfullscreen></iframe>
     </iframe>
     </section>
     
