--- a/hjemmesider.html
+++ b/hjemmesider.html
@@ -30,6 +30,26 @@
 
     <section class="banner">
         <div class="content">
+            <h3>Responsiv Hjemmeside: </h3>
+            <img src="website1.png" class="website2">
+            <p>Følgende hjemmeside er et eksempel på en responsiv hjemmeside. Her er det vigtigt
+                at lave en hjemmeside der kan besøges af en mobiltelefon samt en computer skærm.
+                Siden er lavet med HTML, CSS og JavaScript.
+            </p>
+            <br>
+            <h3>Ren frontend: </h3>
+            <p>
+                På følgende link kan du besøge hjemmesiden og se hvad der sker når man trykker på
+                de forskellige frugter og husk at spise frugt hver dag.
+                <br><br>
+                <a href="beverages.html" target="_blank">Eks. på hjemmeside</a>
+            </p>
+        </div>
+        <img src="website1.png" class="website1">
+    </section>
+
+    <section class="banner">
+        <div class="content">
             <h3>Formål: </h3>
             <p>Denne hjemmeside skulle forestille sig at være et forum hvor man kan dele sine billeder. 
                 Når log-in informationerne er indtastet, så tjekkes de op imod de eksisterende profiler i en database og man bliver 
@@ -37,6 +57,7 @@
             </p>
             <br>
             <h3>Implementeringer: </h3>
+            <iframe width=100% height=350px class="forum2" src="hjemmeside_base64_img_storage.mp4" frameborder="1" sandbox allowfullscreen></iframe>
             <p>
                 Log-in sikkerhed, registrering af ny bruger, base64 lagring af billeder i database, 
                 brug af API'er + AJAX call, implementering for at undgå cross-site-scripting (xss) 
@@ -44,26 +65,23 @@
                 til sidst tjek af billede mimetype om det er jpeg.
             </p>
         </div>
-        <iframe width=100% height=350px src="hjemmeside_base64_img_storage.mp4" frameborder="1" sandbox allowfullscreen></iframe>
+        <iframe width=100% height=350px class="forum1" src="hjemmeside_base64_img_storage.mp4" frameborder="1" sandbox allowfullscreen></iframe>
     </iframe>
     </section>
 
     <section class="banner">
         <div class="content">
             <h3>Formål: </h3>
+            <iframe width=100% height=350px class="node2" src="web2_node_socketsIOny.mp4" frameborder="1" sandbox allowfullscreen></iframe>
             <p>Denne hjemmeside viser et bud på et enkelt chatsystem med brug af Node.js og Socket.IO.
                 Her skal man "logge" ind ved at indtaste en brugernavn og herefter kan man skrive med hinanden
                 i det tildelte chatrum.
             </p>            </p>
             <br>
         </div>
-        <iframe width=100% height=350px src="web2_node_socketsIOny.mp4" frameborder="1" sandbox allowfullscreen></iframe>
+        <iframe width=100% height=350px class="node1" src="web2_node_socketsIOny.mp4" frameborder="1" sandbox allowfullscreen></iframe>
     </iframe>
     </section>
 
-    <section class="banner">
-        ny sek
-    </section>
-    
 </body>
 </html>
