--- a/spiludvikling.html
+++ b/spiludvikling.html
@@ -32,10 +32,12 @@
     <section class="banner">
         <div class="content">
             <h3>Augmented Reality i skolen!</h3>
+            <img src="AR-kemi1.png" class="kemi3">
             <p>Mange kender det. Det kan altså være svært at læse om kemi og molekyler når det kan fremstå lidt abstrakt når de er så små og de ikke er synlige for øjet. </p>
     
             <br><br>
             <h3>Læringsmateriale til kemiundervisning på en skole:</h3>
+            <img src="AR-kemi2.png" class="kemi4">
             <p>
                 Denne løsning gjorde det muligt for skolebørn i de større trin, at se molekyler som CO2, Hydrogen og vand i 3D ved hjælp af Augmented Reality!
             </p>
@@ -62,6 +64,7 @@
             </p>
             <br><br>
             <h3>Spillet demonstreret på en iPad:</h3>
+            <iframe width=100% height=350px src="wacca.mp4" class="wacca-vid2" frameborder="1" sandbox allowfullscreen></iframe>
             <p>
                 Konceptet er inspireret fra det klassiske Arcade-spil, hvor man skal slå en muldvarp i hovedet også kaldet "whack a mole".
             </p>
@@ -79,6 +82,7 @@
     
             <br><br>
             <h3>Aritmetik i spil!:</h3>
+            <img src="stl1.png" class="stl2">
             <p>
                 Dette spil ligner mange andre monsterspil på markedet. Du er en ridder og skal slå monstre ihjel. MEN, du skal bruge hovedregning til at regne ud hvor mange gange du skal slå monstret!
             </p>
@@ -101,6 +105,7 @@
     <section class="banner">
         <div class="content">
             <h3>Programmering i skolen!</h3>
+            <img src="blockly.png" class="blockly2">
             <p>Formålet med dette projekt er, at skabe et lærings produkt der kombinerer blok programmering og spil. Produktet består af en hjemmeside, hvor man vha. Blok programmering skal styre éns karakter/spiller hen til en skat, samle points og komme igennem diverse forhindringer.</p>
             <p>
                 Opgaven er at føre trekanten over til det grønne felt med en sammensætning af programmeringsblokke (venstre) der tilsammen udgør trekantens bevægelse og retning.
