--- a/spiludvikling.html
+++ b/spiludvikling.html
@@ -64,13 +64,13 @@
             </p>
             <br><br>
             <h3>Spillet demonstreret på en iPad:</h3>
-            <iframe width=100% height=350px src="wacca.mp4" class="wacca-vid2" frameborder="1" sandbox allowfullscreen></iframe>
+            <div class="video-container"> 
+                <iframe src="wacca.mp4"  frameborder="1" sandbox ></iframe>
+            </div>
             <p>
                 Konceptet er inspireret fra det klassiske Arcade-spil, hvor man skal slå en muldvarp i hovedet også kaldet "whack a mole".
             </p>
         </div>    
-        <iframe width=100% height=350px src="wacca.mp4" class="wacca-vid" frameborder="1" sandbox allowfullscreen></iframe>
-    </iframe>
     </section>
     
     <section class="banner">
