--- a/ryan.html
+++ b/ryan.html
@@ -87,19 +87,24 @@
     <section>
         <div class="bg2"></div>
         <div class="content">
-            <p class="textBox2">I offer:</p>
+            <p class="textBox2">I offer help with:</p>
+            <p class="offer_explanation">I will be available for personal contact via. Zoom calls, 
+                I will provide meal-plans to ensure optimal nutrition. You will get the first
+                personal training with me for free to make sure you do the training exercises correct.
+
+            </p>
             <div class="row">
                 <div class="column">
                 <img src="weightloss.jpeg" class="offer_pic" style="width:100%">
-                <p class="offer_p">Weightloss guidance</p>
+                <p class="offer_p">Weightloss Guidance</p>
                 </div>
                 <div class="column">
                 <img src="bodybuilding.jpeg" class="offer_pic" style="width:100%">
-                <p class="offer_p">Bodybuilding guidance</p>
+                <p class="offer_p">Bodybuilding Training</p>
                 </div>
                 <div class="column">
                 <img src="powerlift.jpeg" class="offer_pic" style="width:100%">
-                <p class="offer_p">Powerlifting guidance</p>
+                <p class="offer_p">Powerlifting Training</p>
                 </div>
             </div>
         </div>
